--- a/public/404.html
+++ b/public/404.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Dash</title>
-    <!-- Start Single Page Apps for GitHub Pages -->
+    <meta charset="utf-8" />
+    <title>Single Page Apps for GitHub Pages</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
+      // MIT License
       // https://github.com/rafgraph/spa-github-pages
+      // This script takes the current url and transforms it into just a hash route
+      // For example:
+      // https://www.foo.tld/site-dash/login -> https://www.foo.tld/site-dash/#/login
       (function (l) {
         if (l.search[1] === "/") {
           var decoded = l.search
@@ -26,10 +27,6 @@
         }
       })(window.location);
     </script>
-    <!-- End Single Page Apps for GitHub Pages -->
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <body></body>
 </html>
