--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/site-dash/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/site-dash/star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site Dash</title>
     <!-- Start Single Page Apps for GitHub Pages -->
